--- a/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
+++ b/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
@@ -2,14 +2,15 @@
 \usepackage{Qsim}
 
 \author{\susi \and \tati}
-\title{\includegraphics[width=4cm]{logoQSim.png}\\Simulador de Arquitecturas Q}
+\title{\includegraphics[width=8cm]{logo}\\Simulador de Arquitecturas Q}
 
 
 \pagestyle{fancy}
 \fancyhead{} % limpio la cabecera
 \fancyhead[R]{\nouppercase{\rightmark}}
 \fancyhead[L]{\nouppercase{\leftmark}}
-\fancyfoot[R]{\includegraphics[width=2cm]{logoQSim.png}}
+\fancyfoot[C]{\includegraphics[width=2cm]{logo}}
+\fancyfoot[R]{\thepage}
 
 \begin{document}
 \maketitle
