--- a/src/main/resources/informe-LaTex/Qsim.sty
+++ b/src/main/resources/informe-LaTex/Qsim.sty
@@ -87,3 +87,5 @@
 
 \newcommand{\mensaje}[1]{\framebox{\parbox{0.9\textwidth}{\centerline{\code{#1}}}}}
 \newcommand{\qi}{Qi}
+
+\hyphenation{de-sa-rro-lla-do-res}
