--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -109,9 +109,9 @@ Esta instrucción describe la disyunción bit a bit entre los datos de los dos o
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Instrucciones de 1 operando origen  (falta revisar Mara)}
+\subsubsection{Instrucciones de 1 operando origen}
 
-El formato de instrucción de un operando origen es el siguiente:\\
+El formato de las instrucciones de un operando origen es el siguiente:\\
 
 \formatoinstr{|c|c|c|c|}
 {CodOp& Relleno&\msrc{}& Operando \src{}\\
@@ -127,9 +127,9 @@ El efecto del JMP es cambiar el PC (Program Counter) por el dato que esta guarda
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Instrucciones de 1 operando destino  (falta revisar Mara)}
+\subsubsection{Instrucciones de 1 operando destino}
 
-El formato de instrucción de un operando destino es el siguiente:\\
+El formato de las instrucciones de un operando destino es el siguiente:\\
 
 \formatoinstr{|c|c|c|c|}
 {CodOp & \msrc{} & Relleno & Operando \src{}\\
@@ -142,9 +142,9 @@ Esta instrucción describe la operación lógica "negación" bit a bit en el dat
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Instrucciones sin operandos  (falta revisar Mara)}
+\subsubsection{Instrucciones sin operandos}
 
-El formato de instrucción sin operandos es el siguiente:\\
+El formato de las instrucciones sin operandos es el siguiente:\\
 
 \formatoinstr{|c|c|}{CodOp & Relleno \\  (4b) & (000000000000)}
 
@@ -158,7 +158,7 @@ El efecto del ret es cambiar el pc por el dato que esta guardado en la celda de 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de salto condicional  (falta revisar Mara)}
 
-El formato de instrucción de salto condicional es el siguiente:\\
+El formato de las instrucciones de salto condicional es el siguiente:\\
 
 \formatoinstr{|c|c|}{CodOp (8)&Desplazamiento(8)} donde los primeros cuatro bits del campo \code{CodOp} es la cadena \code{1111}. Si \textbf{al evaluar la condición de salto} el resultado es 1, se le suma al PC el valor del desplazamiento, representado en el sistema Complemento a 2 de 8 bits. En caso contrario la instrucción no hace nada.
 
