--- a/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
+++ b/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
@@ -30,7 +30,7 @@
 \input{howto}
 \input{erroresComunes}
 
-
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{9}
 
